[gd_scene load_steps=2 format=3 uid="uid://ce65mgua1reeb"]

[ext_resource type="Script" path="res://dr0/placeholder_launch_scene.gd" id="1_be0ho"]

[node name="PlaceholderLaunchScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_be0ho")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Launch Beginning
"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Launch Present"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Launch Past"

[node name="Button4" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Launch Good Ending"

[node name="Button5" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Launch Bad
 Ending"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="VBoxContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="VBoxContainer/Button5" to="." method="_on_button_5_pressed"]
